--- a/package.json
+++ b/package.json
@@ -3,8 +3,13 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@material-ui/core": "^3.9.3",
+    "@material-ui/icons": "^3.0.2",
+    "materialize-css": "^1.0.0",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
+    "react-materialize": "^3.3.0",
+    "react-router-dom": "^5.0.0",
     "react-scripts": "1.1.5"
   },
   "scripts": {
@@ -21,5 +26,9 @@
     "not dead",
     "not ie <= 11",
     "not op_mini all"
-  ]
+  ],
+  "devDependencies": {
+    "css-loader": "^2.1.1",
+    "style-loader": "^0.23.1"
+  }
 }
