--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
     "materialize-css": "^1.0.0",
+    "materialize-social": "^1.0.3",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
     "react-materialize": "^3.3.0",
