--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@material-ui/core": "^3.9.3",
     "@material-ui/icons": "^3.0.2",
+    "axios": "^0.18.0",
     "materialize-css": "^1.0.0",
     "materialize-social": "^1.0.3",
     "react": "^16.8.1",
